--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,15 @@
-asttokens==2.4.1
-attrs==23.2.0
-certifi==2022.9.24
-charset-normalizer==2.1.1
 colorama==0.4.6
-comm==0.2.2
-contourpy==1.0.6
-cycler==0.11.0
-debugpy==1.8.2
-decorator==5.1.1
-exceptiongroup==1.2.1
-executing==2.0.1
-fastjsonschema==2.20.0
-fonttools==4.38.0
-graphviz==0.20.1
-idna==3.4
+exceptiongroup==1.3.0
 iniconfig==2.1.0
-ipykernel==6.29.5
-ipython==8.26.0
-jedi==0.19.1
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kiwisolver==1.4.4
-matplotlib==3.6.2
-matplotlib-inline==0.1.7
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.0
-numpy==1.24.1
-packaging==23.0
-pandas==2.2.3
-parso==0.8.4
-Pillow==9.4.0
-platformdirs==4.2.2
-plotly==5.22.0
+numpy==2.2.6
+packaging==25.0
+pandas==2.3.2
 pluggy==1.6.0
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pure-eval==0.2.2
-Pygments==2.18.0
-pyparsing==3.0.9
+Pygments==2.19.2
 pytest==8.4.2
-python-dateutil==2.8.2
-pytz==2024.2
-pywin32==306
-pyzmq==26.0.3
-referencing==0.35.1
-requests==2.28.1
-rpds-py==0.19.0
-scipy==1.15.2
-six==1.16.0
-stack-data==0.6.3
-tenacity==8.5.0
+python-dateutil==2.9.0.post0
+pytz==2025.2
+six==1.17.0
 tomli==2.2.1
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==1.26.12
-wcwidth==0.2.13
+typing_extensions==4.15.0
+tzdata==2025.2
